community: JQtGallery 更新为原始源码版（v0.5.0-TEST 五大分区：主题/控件/动画/窗口/v5 新控件）+ ThemePack 三主题 + README